erase underline (CSS)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
       <li><a href="2.html">CSS</a></li>
       <li><a href="3.html">JavaScript</a></li>
     </ol>
+    
+    <style>
+      a{
+        color: black;
+        text-decoration: none;
+       }
+    </style>
+    
     <h2>WEB이란 무엇인가?</h2>
     <img src="coding.jpg" width="30%">
     <p>The World Wide Web (abbreviated WWW or the Web) is an information space where
