--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         color: black;
         text-decoration: none;
        }
+      h1 {
+        font-size: 45px;
+      }
     </style>
     
     <h2>WEB이란 무엇인가?</h2>
